istio added and tested on default namespace
Former-commit-id: c0bd1b6e67ba4761237cc42938e0976d1b7a8c8e
Former-commit-id: 5241cf1e8082ffe8b64752d77ec9ea1f549053f3 [formerly 046f89399e14e29e29057f3830455849b52ea5ab]
Former-commit-id: 9cbd8ec9b57f5997f1fc8db484d68c04ea01651a

--- a/src/Server/k8s/deployment.yml
+++ b/src/Server/k8s/deployment.yml
@@ -1,10 +1,15 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dashboard-app
+  labels: 
+    app: dashboard-app
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: dashboard-app
   template:
     metadata:
       labels:
@@ -16,15 +21,16 @@ spec:
         name: dashboard-app
         ports:
         - containerPort: 80
-        resources:
-
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: basket-api
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: basket-api
   template:
     metadata:
       labels:
@@ -46,15 +52,16 @@ spec:
           value: redis-data:6379
         - name: BASE_PATH
           value: /basket
-        resources:
-
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: identity-api
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: identity-api
   template:
     metadata:
       labels:
@@ -103,14 +110,16 @@ spec:
             configMapKeyRef:
               name: local-config
               key: identity__ConnectionString
-        resources:
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: menu-api
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: menu-api
   template:
     metadata:
       labels:
@@ -144,15 +153,17 @@ spec:
             configMapKeyRef:
               name: internal-urls
               key: identity
-        resources:
         
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: order-api
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: order-api
   strategy: {}
   template:
     metadata:
@@ -187,22 +198,4 @@ spec:
           valueFrom:
             configMapKeyRef:
               name: local-config
-              key: order__DataSourceUserName 
-        resources:
-
-
----
-        # livenessProbe:
-        #   httpGet:
-        #     path: /actuator/health
-        #     port: 8090
-        #   initialDelaySeconds: 10
-        #   timeoutSeconds: 5
-        #   periodSeconds: 10
-        # readinessProbe:
-        #   httpGet:
-        #     path: /actuator/health
-        #     port: 8090
-        #   initialDelaySeconds: 10
-        #   timeoutSeconds: 5
-        #   periodSeconds: 10
+              key: order__DataSourceUserName
