--- a/src/Server/k8s/redis-data.yml
+++ b/src/Server/k8s/redis-data.yml
@@ -1,10 +1,13 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: basket-cache
   strategy: {}
   template:
     metadata:
@@ -14,6 +17,7 @@ spec:
       containers:
       - image: redis:alpine
         name: cache-data
+        imagePullPolicy: IfNotPresent
         resources:
 
 ---
