--- a/src/Server/services/order.api/src/main/resources/application.properties
+++ b/src/Server/services/order.api/src/main/resources/application.properties
@@ -14,3 +14,5 @@ management.endpoints.web.base-path=
 management.endpoint.health.show-details=always
 
 server.use-forward-headers=true
+identity.url.pub=http://localhost:5100
+basket.url=http://localhost:5200
