Spring Boot 2.2 upgrade Swagger Auth URL override Istio Ingress Gateway added with VirtualServices Docker OpenJDK using OpenJ9 to improving perforamance in the cloud
Former-commit-id: 67a561853bfea98fb6dbe0ab05e6002bd5f1d2f9
Former-commit-id: 74afc28e8b615de17cc4b7a06d1583f1629f864d [formerly be322d03af7cf585f1f9bbdffeb1c45559c64133]
Former-commit-id: f66914675723c8de22a460751e343cdd9f006113

--- a/src/Server/docker-compose.override.yml
+++ b/src/Server/docker-compose.override.yml
@@ -21,6 +21,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - IDENTITY_URL=http://identity-api
+      - IDENTITY_URL_PUB=http://localhost:8080/identity
       - BASE_PATH=/basket
   
   pgsql:
