--- a/src/Server/services/order.api/src/main/resources/application.properties
+++ b/src/Server/services/order.api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.address=0.0.0.0
 server.port=8090
 
 spring.jpa.generate-ddl=true
@@ -14,5 +15,11 @@ management.endpoints.web.base-path=
 management.endpoint.health.show-details=always
 
 server.use-forward-headers=true
-identity.url.pub=http://localhost:5100
-basket.url=http://localhost:5200
+IDENTITY_URL_PUB=http://localhost:5100
+BASKET_URL=http://localhost:5200
+
+server.tomcat.max-threads=5
+
+# Spring Boot initialization time improvements
+spring.main.lazy.initialization=true
+spring.jmx.enabled=true
