--- a/src/Server/web/web.admin/dashboard/Dockerfile
+++ b/src/Server/web/web.admin/dashboard/Dockerfile
@@ -5,10 +5,7 @@ WORKDIR /usr/src/app
 COPY package*.json yarn.lock ./
 RUN yarn
 COPY . ./
-RUN yarn build --prod
-
-#  --base-href=/dashboard/ --deploy-url=/dashboard/
-#--deploy-url /dashboard/
+RUN yarn build --prod --base-href=/dashboard/ --deploy-url=/dashboard/
 
 # Stage 2
 FROM nginx:alpine
