--- a/src/Server/gateway/restaurant-gateway/Dockerfile.local
+++ b/src/Server/gateway/restaurant-gateway/Dockerfile.local
@@ -8,8 +8,8 @@ WORKDIR /usr/src/gateway
 
 RUN gradle build
 
-FROM openjdk:8-jre-alpine
+FROM adoptopenjdk/openjdk8-openj9:alpine-slim
 COPY --from=builder /usr/src/gateway/build/libs/restaurant-gateway-0.0.1.jar gateway.jar
 
-ENTRYPOINT ["java", "-jar", "/gateway.jar"]
+CMD java $JAVA_OPTS -Xshareclasses -Xquickstart -jar /gateway.jar
 EXPOSE 8080
