--- a/src/Server/k8s/ingress.yml
+++ b/src/Server/k8s/ingress.yml
@@ -6,9 +6,10 @@ metadata:
   labels:
     app: frontend
   annotations:
-    # kubernetes.io/ingress.class: traefik
     kubernetes.io/ingress.class: nginx
-    # nginx.ingress.kubernetes.io/rewrite-target: /dashboard
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^/dashboard/(.*) /$1 break;
+      
 spec:
   rules:
     - host: api.restaurant.com
@@ -30,10 +31,7 @@ spec:
             backend:
               serviceName: order-api
               servicePort: http
-    - host: dashboard.restaurant.com
-      http:
-        paths:
-        - path: /
-          backend:
-            serviceName: dashboard-app
-            servicePort: http
+          - path: /dashboard
+            backend:
+              serviceName: dashboard-app
+              servicePort: http
