--- a/src/Server/services/order.api/Dockerfile.local
+++ b/src/Server/services/order.api/Dockerfile.local
@@ -1,4 +1,4 @@
-FROM gradle:4.8-jdk8 as builder
+FROM gradle:5.6-jdk8 as builder
 
 COPY . /usr/src/ordering_api
 USER root
@@ -8,9 +8,9 @@ USER gradle
 WORKDIR /usr/src/ordering_api
 RUN gradle build
 
-FROM openjdk:8-jre-alpine
+FROM adoptopenjdk/openjdk8-openj9:alpine-slim
 WORKDIR /root/
 COPY --from=builder /usr/src/ordering_api/build/libs/order.api.jar .
 
 EXPOSE 8090
-CMD ["java", "-jar", "./order.api.jar"]
+CMD java $JAVA_OPTS -Xshareclasses -Xquickstart -jar ./order.api.jar
