--- a/src/Server/services/order.api/build.gradle
+++ b/src/Server/services/order.api/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.4.RELEASE'
+        springBootVersion = '2.2.0.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -18,12 +18,11 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'jacoco'
 apply plugin: 'com.github.ksoichiro.console.reporter'
-apply plugin: 'org.sonarqube';
+apply plugin: 'org.sonarqube'
 
 
 group = 'com.jurabek.restaurant'
 sourceCompatibility = 1.8
-
 
 jacocoTestReport {
     reports {
