Sonarqube for PR
Former-commit-id: 692a1d0dae7a31b5ec9fba4c5d1da150647cdd2b
Former-commit-id: ce786083a8a67afcd838783ca4105340f11ef667 [formerly 6d020d4b7e218800b7d11c70688bf29574fa857c]
Former-commit-id: bc0e358bf38f37a9ba1a1e5f438620d3b03ee8cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build:basket_api:
   stage: build & test
   script:
     # - sh services/basket.api/install_ci_dependencies.sh
-    - ci/update_build_badge.sh running basket_api
+    # - ci/update_build_badge.sh running basket_api
     - echo "failure" > basket_status.txt #https://gitlab.com/gitlab-org/gitlab-runner/issues/3088
     - ci/qa.sh basket_api
     - ci/build.sh basket_api
@@ -113,8 +113,8 @@ build:menu_api:
     refs:
       - external_pull_requests
       - develop
-  artifacts:
-    when:
-      always
-    paths:
-      - public/
+  # artifacts:
+  #   when:
+  #     always
+  #   paths:
+  #     - public/
