Sonarqube Github PR update with Sonar Github App
Former-commit-id: 7b9cb48bae5b12338756fee1dd22842948b45d38
Former-commit-id: bfdd53d5ac1e9338e3502f0149be7dd1240f9bdb [formerly ea2524913349c75193ec903d8c3a5c4745a7ff06]
Former-commit-id: ded572cbc7981d45eed48e1876f1c41437b4aa7d

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,10 @@ trigger:
     include:
     - src/Client/*
     - azure-pipelines.yml
+pr:
+  branches:
+    include:
+    - develop
 
 jobs:
 - job: Android
