--- a/src/Server/services/basket.api/sonar-project.properties
+++ b/src/Server/services/basket.api/sonar-project.properties
@@ -10,3 +10,6 @@ sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
 sonar.go.coverage.reportPaths=coverage.out
+
+sonar.pullrequest.provider=GitHub
+sonar.pullrequest.github.repository=Jurabek/Restaurant-App
