basket_api_build_problem_fixed
Former-commit-id: 481a4caec07fe1b7a8b3553530373f5a3fe20c49
Former-commit-id: 9ddd852c115f0f43d7566cf2340b5e61ae9a178c [formerly 17d472e6a6bd0be0930bdad992a1e48f6822286b]
Former-commit-id: e6302e09f2e271b09798e065e6f3d8ffadf267ab

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,7 @@ trigger:
     include:
     - src/Client/*
     - azure-pipelines.yml
-pr:
-  branches:
-    include:
-    - develop
+pr: none
 
 jobs:
 - job: Android
