--- a/src/Server/services/order.api/build.gradle
+++ b/src/Server/services/order.api/build.gradle
@@ -58,10 +58,5 @@ dependencies {
     compile('org.hibernate:hibernate-core:5.4.2.Final')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.mockito:mockito-core:2.+')
-}
-
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.SR2'
-    }
+    testCompile('com.google.code.bean-matchers:bean-matchers:0.12')
 }
