--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -5,12 +5,16 @@ on:
   push:
     branches:
     - develop
+    paths:
+    - './src/Server/services/basket.api/**'
   pull_request:
     branches:
     - develop
+    paths:
+    - './src/Server/services/basket.api/**'
 
 jobs:
-  container-job:
+  build:
     runs-on: ubuntu-latest
 
     container:
@@ -20,6 +24,9 @@ jobs:
     - uses: actions/checkout@v1
     - run: |
         chmod -R +x ci/
-        ci/qa.sh basket_api
         ci/build.sh basket_api
+        echo $GOPATH
+        cd $GOPATH
+        ls
       working-directory: ./src/Server/
+    
