Basket API in github actions
Former-commit-id: c4e5e49daec5c2a25494bbb772cd0fcf0d676462
Former-commit-id: a7ba4c8e258e01dee46902f70f6f1bd0a734ed03 [formerly 16590ab0379092a11253b0a9378056243cfde03e]
Former-commit-id: 521ebcc0a59cbad75fdbd66cbd557989a65fd186

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -27,13 +27,15 @@ jobs:
     - run: |
         chmod -R +x ci/
         ci/build.sh basket_api
+        ls
       working-directory: ./src/Server/
     - name: Upload basket-api artifact
       uses: actions/upload-artifact@v1
       with:
         name: basket_api
-        path: ./basket.api
+        path: ./src/Server/services/basket.api/basket.api
   docker-build-and-push:
+    needs: build-and-test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
@@ -41,6 +43,12 @@ jobs:
       uses: actions/download-artifact@v1
       with:
         name: basket_api
+    - name:
+      shell: bash
+      run: |
+        ls
+        cd basket_api
+        ls
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
