Basket API docker build in Github Actions
Former-commit-id: cc30677882ee47e141e05c21c7006ebf5d92cd13
Former-commit-id: cfde0885dfa9495268d8873c59f19e92b0c174c6 [formerly 1a44c5448993fec2e0968b23a69d06727e5df32e]
Former-commit-id: b8d576fa85bb55c60ea1a1ffda125a1892713040

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -24,11 +24,21 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
     - uses: actions/checkout@v1
-    - run: |
+    - name: build artifact 
+      run: |
         chmod -R +x ci/
         ci/build.sh basket_api
         ls
       working-directory: ./src/Server/
+    - name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        name: jurabek/basket
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        dockerfile: Dockerfile.ci
+      working-directory: ./src/Server/
+      
     - name: Upload basket-api artifact
       uses: actions/upload-artifact@v1
       with:
@@ -49,10 +59,3 @@ jobs:
         ls
         cd basket_api
         ls
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: jurabek/basket
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        dockerfile: Dockerfile.ci
