Basket API docker build in Github Actions
Former-commit-id: ea0973268727bdc9f40db8182dac92bea054d0d0
Former-commit-id: 2bf2d9a69bb1f3fbc4803aeb7914f2bc9fe689cb [formerly 564a4ed715f72ab9e5c58ca0d0bc8aea2b0b10c6]
Former-commit-id: 7e4a06e91aa7c2710dc080650be763159c5511a7

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -37,8 +37,8 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         dockerfile: Dockerfile.ci
-      working-directory: ./src/Server/
-      
+        workdir: ./src/Server/services/basket.api
+
     - name: Upload basket-api artifact
       uses: actions/upload-artifact@v1
       with:
