--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -24,27 +24,18 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
     - uses: actions/checkout@v1
-    - name: build artifact 
+    - name: Build artifact 
       run: |
         chmod -R +x ci/
         ci/build.sh basket_api
-        ls
       working-directory: ./src/Server/
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: jurabek/basket
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        dockerfile: Dockerfile.ci
-        workdir: ./src/Server/services/basket.api
-
     - name: Upload basket-api artifact
       uses: actions/upload-artifact@v1
       with:
         name: basket_api
         path: ./src/Server/services/basket.api/basket.api
-  docker-build-and-push:
+  
+  docker-push:
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
@@ -53,9 +44,15 @@ jobs:
       uses: actions/download-artifact@v1
       with:
         name: basket_api
-    - name:
+    - name: Copy artifact to working directory
       shell: bash
       run: |
-        ls
-        cd basket_api
-        ls
+        cp basket_api/basket.api ./src/Server/services/basket.api/
+    - name: Publish docker image
+      uses: elgohr/Publish-Docker-Github-Action@master
+      with:
+        name: jurabek/basket
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        dockerfile: Dockerfile.ci
+        workdir: ./src/Server/services/basket.api
