Add sonarqube issue fixed
Former-commit-id: 844fc5f64564b31536489452db2305b8ca29f14e
Former-commit-id: 72b96fc339767210dcdcf48109c86aa49623f824 [formerly f0c74481e50711c8d9c0d9ae9fea2981efb7362c]
Former-commit-id: 7550996e8592b42668602835c66d28263c17e302

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -35,7 +35,7 @@ jobs:
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       with:
-        projectBaseDir: ./src/Server/services/basket.api/basket.api
+        projectBaseDir: ./src/Server/services/basket.api
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.BASKET_API_SONAR_TOKEN }}
