Add sonarqube issue fixed
Former-commit-id: b2003fa551c044da1d13b67a4b4e8f160ff11269
Former-commit-id: 9c5e3b40acbd0494fef8ebebed26b9962ed34274 [formerly 2555f108b305baabef4947e55bf374fdadd3b7f2]
Former-commit-id: 20554944e8d75ad1dc217af69758eb246cdb5443

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -31,10 +31,10 @@ jobs:
         ci/qa.sh basket_api
       working-directory: ./src/Server/
     - uses: actions/upload-artifact@v1
-        name: Upload basket-api artifact
-        with:
-          name: basket_api
-          path: ./src/Server/services/basket.api/basket.api
+    - name: Upload basket-api artifact
+      with:
+        name: basket_api
+        path: ./src/Server/services/basket.api/basket.api
 
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
