Add sonarqube issue fixed
Former-commit-id: dff04a6b1b92205152f5d5965b54df27695a0b97
Former-commit-id: 45f28fdafc5fb106d9581770d438581f70929337 [formerly 398eb6da419abd08ead5cebf68d76069f5cc5322]
Former-commit-id: e45d42bcce69173a348af903e04bef7f5d5b35c0

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -17,21 +17,25 @@ jobs:
     container:
       image: jurabek/golang:1.11-alpine
     steps:
-    - uses: actions/cache@v1
+    - name: Setup cache
+      uses: actions/cache@v1
       with:
         path: /go/pkg/mod
         key: ${{ runner.os }}-go-basket-api
         restore-keys: |
           ${{ runner.os }}-go-
+        
     - uses: actions/checkout@v1
+    
     - name: Build & QA 
       run: |
         chmod -R +x ci/
         ci/build.sh basket_api
         ci/qa.sh basket_api
       working-directory: ./src/Server/
-    - uses: actions/upload-artifact@v1
+    
     - name: Upload basket-api artifact
+      uses: actions/upload-artifact@v1
       with:
         name: basket_api
         path: ./src/Server/services/basket.api/basket.api
