--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -8,15 +8,19 @@ on:
   pull_request:
     branches:
     - develop
-    paths:
-    - './src/Server/services/basket.api/**'
+    # paths:
+    # - './src/Server/services/basket.api/**'
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    container:
-      image: jurabek/golang:1.11-alpine
+    # container:
+    #   image: jurabek/golang:1.11-alpine
     steps:
+     - name: Install Go
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.13.x
     - name: Setup cache
       uses: actions/cache@v1
       with:
@@ -24,7 +28,8 @@ jobs:
         key: ${{ runner.os }}-go-basket-api
         restore-keys: |
           ${{ runner.os }}-go-
-        
+    
+    - name: Checkout code    
     - uses: actions/checkout@v1
     
     - name: Build & QA 
@@ -52,7 +57,8 @@ jobs:
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - name: Checkout code
+    - uses: actions/checkout@v1
     - name: Download basket-api artifact
       uses: actions/download-artifact@v1
       with:
