Sonar scanner pre build docker image
Former-commit-id: 0d9682753540149b4b7c1b0bd4fb8555286436c1
Former-commit-id: 382dd36dc9f8429318903563e222d43438fc96c4 [formerly d5a4d31d65efe75742298819321aec8b70ce93c8]
Former-commit-id: 2c6bb012aa63204c321145a04df7b05a1914fbd7

--- a/src/Server/services/order.api/build.gradle
+++ b/src/Server/services/order.api/build.gradle
@@ -46,16 +46,22 @@ repositories {
 }
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-starter-oauth2-resource-server')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile('com.auth0:auth0-spring-security-api:1.1.0')
-    compile('com.auth0:jwks-rsa:0.8.2')
+    compile('org.apache.httpcomponents:httpclient:4.5.10')
     compile('org.postgresql:postgresql:42.2.5')
     compile('io.springfox:springfox-swagger2:2.9.2')
     compile('io.springfox:springfox-swagger-ui:2.9.2')
+
     compile('org.modelmapper:modelmapper:2.3.0')
     compile('org.hibernate:hibernate-core:5.4.2.Final')
+
+    compileOnly('org.projectlombok:lombok:1.18.10')
+    annotationProcessor('org.projectlombok:lombok:1.18.10')
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.mockito:mockito-core:2.+')
     testCompile('com.google.code.bean-matchers:bean-matchers:0.12')
