Sonar scanner pre build docker image
Former-commit-id: 9a96ed67ec79fd9611a5289b69cd4cb34271f6f3
Former-commit-id: 6ddf34c35cd588ef42443cc93d0823e20e8ac6b9 [formerly 36e62852df741f52f405afc85404336206015ce7]
Former-commit-id: 87a3267b39b6bb8d0a6d0e71d0664e311cadc693

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -14,8 +14,6 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    # container:
-    #   image: jurabek/golang:1.11-alpine
     steps:
     - name: Install Go
       uses: actions/setup-go@v1
@@ -24,8 +22,8 @@ jobs:
     - name: Setup cache
       uses: actions/cache@v1
       with:
-        path: /go/pkg/mod
-        key: ${{ runner.os }}-go-basket-api
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
     
