--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-go-${{ hashFiles('./src/Server/services/basket.api/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
     
