Sonar scanner pre build docker image
Former-commit-id: 7f20b76aff2d791ebd146e7e91d6103078517e37
Former-commit-id: 705fc70a6fca17ad0b9fed1de8d525d8cfee31c9 [formerly 7f7bc90914b7febb3a56b0cf0bf354ca323164ee]
Former-commit-id: 98f1ba8d3d360c8f600fb9cfff30573549e83e0e

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -20,10 +20,10 @@ jobs:
       with:
         go-version: 1.13.x
     - name: Setup cache
-      uses: actions/cache@v1
+      uses: actions/cache@preview
       with:
         path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('./src/Server/services/basket.api/go.sum') }}
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
     
@@ -41,8 +41,8 @@ jobs:
         name: basket_api
         path: ./src/Server/services/basket.api/basket.api
 
+    - uses: jurabek/sonar-scanner-github-actions@master
     - name: SonarCloud Scan
-      uses: jurabek/sonar-scanner-github-actions@master
       with:
         projectBaseDir: ./src/Server/services/basket.api
       env:
