Sonar scanner pre build docker image
Former-commit-id: d933381c28d1e4b2be2fda515144a5bf88d7af9d
Former-commit-id: e66860921c011f12343a4ae77526585625087c50 [formerly c0df45e2bc2faf863ff5de6d93c58a25bb5f2a6d]
Former-commit-id: 2a938124f8589d0147901d99e133893f62b569e9

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -41,8 +41,8 @@ jobs:
         name: basket_api
         path: ./src/Server/services/basket.api/basket.api
 
-    - uses: jurabek/sonar-scanner-github-actions@master
     - name: SonarCloud Scan
+      uses: jurabek/sonar-scanner-github-actions@master
       with:
         projectBaseDir: ./src/Server/services/basket.api
       env:
