Sonar scanner pre build docker image
Former-commit-id: e042cd22fcdc901fba676c4f8fb3985c295ad312
Former-commit-id: ce87ce9507a56dd71a7ab2f7e652b7922f44fa07 [formerly f1d19627bc8bca1624fcfa790df00f7d30d2f19b]
Former-commit-id: 250bc708f3756f32a58774ec050358bf71cb9618

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -23,9 +23,9 @@ jobs:
       uses: actions/cache@preview
       with:
         path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        key: go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-go-
+          go-
     
     - uses: actions/checkout@v1
     - name: Build & QA 
