--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -20,10 +20,10 @@ jobs:
       with:
         go-version: 1.13.x
     - name: Setup cache
-      uses: actions/cache@preview
+      uses: actions/cache@v1
       with:
         path: ~/go/pkg/mod
-        key: go-${{ hashFiles('**/go.sum') }}
+        key: go-${{ hashFiles('**go.sum') }}
         restore-keys: |
           go-
     
