Sonar scanner pre build docker image
Former-commit-id: d2ddb1a372af5d224e79f694c4e3dc841b59111f
Former-commit-id: 1cda466649e4d0b5b4ef5446c641f629f7c21a6a [formerly 252d5e305019dbe90edf631e3b2d5a999da0ebf1]
Former-commit-id: 287bac8eee82ad4980026dc5716fbee552ce3013

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ~/go/pkg/mod
-        key: go-${{ hashFiles('**go.sum') }}
+        key: go-${{ hashFiles('./src/Server/services/basket.api/basket.api/go.sum') }}
         restore-keys: |
           go-
     
