Sonar scanner pre build docker image
Former-commit-id: 8ec5c5bc53c55042556bfbfed260e087a5751281
Former-commit-id: ceedd7678e122410ac2d89adff077ce7b2b38704 [formerly 1d2e803eb6c3ab3fd4365d8db2865121bb814236]
Former-commit-id: 721651137cf7b212860ab6332a1228a940e2c323

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -23,9 +23,9 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ~/go/pkg/mod
-        key: go-${{ hashFiles('./src/Server/services/basket.api/basket.api/go.sum') }}
+        key: go-cache-key
         restore-keys: |
-          go-
+          go-cache-key
     
     - uses: actions/checkout@v1
     - name: Build & QA 
