Order api improvements
Former-commit-id: 26c7169435de51f9b3f5cde88aed70d2cda6074c
Former-commit-id: 3825816ea914ae0e7629fdebf1c39f81e02f22de [formerly 33a1103d8b23a002595d13d7e66b211162ed2f2a]
Former-commit-id: fd6d6ea64c7f71ed9620180878f7a5bac6d266b0

--- a/src/Server/services/order.api/src/main/resources/application.yml
+++ b/src/Server/services/order.api/src/main/resources/application.yml
@@ -43,8 +43,10 @@ management:
     health:
       show-details: always
 
-IDENTITY_URL_PUB: http://localhost:5100
-BASKET_URL: http://localhost:5200
-
+microservices:
+  basket-api:
+    url: http://localhost:5200
+  identity-api-public:
+    url: http://localhost:5100
 
 
