Github actions pipeline per folder
Former-commit-id: e04236a89fef8d7777ad7464f63e97f2f05efbfc
Former-commit-id: 5e8bd780da2ffa3cbafaa770c58bc7c5bcac7385 [formerly 8445d3471f0d0a8ff9e5c7aff0a97ba5ebaf8c9e]
Former-commit-id: 3685d857cb812d6bb6dcd645ef2df4f6f0137357

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -8,8 +8,8 @@ on:
   pull_request:
     branches:
     - develop
-    # paths:
-    # - './src/Server/services/basket.api/**'
+    paths:
+    - './src/Server/services/basket.api/**'
 
 jobs:
   build-and-test:
