--- a/.github/workflows/menu-api.yml
+++ b/.github/workflows/menu-api.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
     - develop
+    paths:
+    - './src/Server/services/menu.api/**'
+
 jobs:
   my_job:
     name: deploy to staging
@@ -19,12 +22,13 @@ jobs:
       - uses: actions/cache@v1
         with:
           path: ~/.nuget/packages
-          key: dotnet-cache-key
+          key: menu-api-dotnet-cache-key
           restore-keys: |
-            dotnet-cache-key
+            menu-api-dotnet-cache-key
       - uses: actions/checkout@v1
       - name: Build & QA 
         run: |
           chmod -R +x ci/
           ci/build.sh menu_api
+          ci/qa.sh menu_api
         working-directory: ./src/Server/
