Actions dotnet global tools issue
Former-commit-id: ef01bd0127cc89af8798a5f181fd0e71f97e63cf
Former-commit-id: a88dbf219580f46e6f048b254720e4fa72d8f58e [formerly d181618569f15bfc46464a09899d9ea04c76314d]
Former-commit-id: dc5082531ca00ca96ae395a43761cd63b9b377e8

--- a/.github/workflows/menu-api.yml
+++ b/.github/workflows/menu-api.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Build & QA 
         run: |
+          echo $PATH
           chmod -R +x ci/
           ci/build.sh menu_api
           ci/qa.sh menu_api
